Add HTML structure for 'The Lost Language of Metaphor'

--- a/reflections/pages/the-lost-language-of-metaphor/read.html
+++ b/reflections/pages/the-lost-language-of-metaphor/read.html
@@ -1,1 +1,380 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <!-- ========== META & HEAD ========== -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 
+  <title>The Paradox of God — Ninox Antolihao</title>
+  <meta name="description" content="A reflection by Ninox Antolihao exploring the paradox of a perfect, loving God revealed through human-shaped beliefs, scriptures, and stories.">
+
+  <meta property="og:title" content="The Paradox of God — Ninox Antolihao">
+  <meta property="og:description" content="A reflection that wrestles with the tension between an infinite Source and the finite images of God we create.">
+  <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/paradoxofgod.png">
+  <meta property="og:image:alt" content="The Paradox of God — Ninox Antolihao">
+  <meta property="og:type" content="article">
+  <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html">
+
+  <link rel="icon" href="/reflections/assets/favicon.ico">
+
+  <!-- Social preview (keep as-is style) -->
+  <meta property="og:image" content="https://stonegrillresto.net/reflections/assets/logo.png">
+  <meta property="og:image:width" content="240">
+  <meta property="og:image:height" content="371">
+  <meta property="og:image:alt" content="A Journey from Duality to Oneness">
+
+  <!-- Global assets -->
+  <link rel="stylesheet" href="/reflections/assets/reflections.css?v=12">
+  <script src="/reflections/assets/audio-system.js?v=12"></script>
+  <link rel="manifest" href="/reflections/manifest.json?v=2">
+  <link rel="apple-touch-icon" href="/reflections/icon-180.png">
+  <meta name="theme-color" content="#ff6b3d">
+
+  <style>
+    body {
+      background: #1f1815;
+      color: #f3e6dd;
+      font-family: "Georgia", "Times New Roman", serif;
+      line-height: 1.75;
+      margin: 0;
+      padding: 0;
+    }
+    main {
+      max-width: 780px;
+      margin: 60px auto;
+      padding: 0 20px 80px;
+    }
+    header {
+      text-align: center;
+      margin-bottom: 50px;
+    }
+    header img {
+      width: 100px;
+      opacity: 0.9;
+    }
+    h1 {
+      font-size: 2em;
+      color: #ff7a00;
+      letter-spacing: 0.5px;
+      margin: 20px 0 5px;
+    }
+    .meta {
+      color: #c9b0a4;
+      font-style: italic;
+      font-size: 0.95em;
+    }
+    h2 {
+      color: #ffb36b;
+      margin-top: 40px;
+      font-size: 1.15em;
+      letter-spacing: 0.5px;
+    }
+    p {
+      text-align: justify;
+      margin: 0.9em 0;
+    }
+    .divider {
+      text-align: center;
+      color: #ff7a00;
+      margin: 2.2em 0;
+    }
+    footer {
+      text-align: center;
+      font-size: 0.85em;
+      color: #c9b0a4;
+      margin-top: 50px;
+    }
+    a.back {
+      display: inline-block;
+      background: #ff7a00;
+      color: white;
+      text-decoration: none;
+      padding: 10px 20px;
+      border-radius: 4px;
+      font-weight: bold;
+      margin-bottom: 40px;
+    }
+    a.back:hover { background: #ff8f26; }
+  </style>
+</head>
+
+<body>
+  <main>
+    <!-- ========== HEADER ========== -->
+    <header>
+      <img src="lostlanguageofmetaphor.png" alt="Stone Grill Logo">
+      <h1>The Lost Language of Metaphor</h1>
+      <p class="meta">By Ninox Antolihao • First Edition — 2025</p>
+    </header>
+
+    <!-- Primary back button -->
+    <a href="/reflections/index.html" class="back">← Back to Reflections</a>
+
+    <!-- 🎧 Audio Player (same folder; TTS-ready) -->
+    <script>
+      document.write(
+        createAudioPlayer(
+          'lost-language-of-metaphor.mp3',
+          'the lost language of metaphor — Audio (Epic TTS Version)'
+        )
+      );
+    </script>
+
+    <div class="divider">⸻</div>
+
+    <h2>THE LOST LANGUAGE OF METAPHOR</h2>
+    <p><em>(by: Ninox Antolihao)</em></p>
+
+    <p><strong>Title:</strong><br>
+    The Lost Language of Metaphor</p>
+
+    <div class="divider">⸻</div>
+
+    <h2>INTRODUCTION</h2>
+
+    <p>Once upon a time… long before churches… long before scriptures…<br>
+    there were stories.</p>
+
+    <p>Stories whispered around fires…<br>
+    not to be owned, not to be proven…<br>
+    but to reflect the divine rhythm of existence.</p>
+
+    <p>Back then, the story was a mirror.<br>
+    But somewhere along the way…<br>
+    the mirror became a wall.<br>
+    And the story… became law.<br>
+    What was meant to awaken the soul…<br>
+    began to bind it.</p>
+
+    <p>Religion didn’t just interpret the mystery.<br>
+    It canonized its own interpretation…<br>
+    and declared it absolute truth.</p>
+
+    <p>Instead of saying, “This is how we understand the mystery,”<br>
+    religion said, “THIS is the mystery… and no other meaning exists.”</p>
+
+    <p>That is not spirituality.<br>
+    That is mythology… mistaken for reality.</p>
+
+    <div class="divider">⸻</div>
+
+    <h2>FROM SYMBOLS… TO STORIES… TO DOGMA</h2>
+
+    <p>Ancient teachings began as symbols—<br>
+    poetic attempts to describe truths too vast for human language.</p>
+
+    <p>But over time, symbols hardened into stories…<br>
+    and stories solidified into rules.</p>
+
+    <p>When a priest or prophet declared,<br>
+    “This story is what happened,”<br>
+    rather than,<br>
+    “This story means something,”<br>
+    the myth turned literal—<br>
+    and humanity lost the metaphor.</p>
+
+    <p>The “creation story” may have been a poetic expression<br>
+    of cosmic order…<br>
+    yet it was treated as a historical event.</p>
+
+    <p>And when myth is taken as fact…<br>
+    the search for deeper meaning ends.</p>
+
+    <div class="divider">⸻</div>
+
+    <h2>WHY THEY CLING TO LITERAL TRUTH</h2>
+
+    <p>Literal belief… creates control.</p>
+
+    <p>When a religion claims monopoly over truth,<br>
+    it gains authority over morality…<br>
+    over fear…<br>
+    over hope.</p>
+
+    <p>When a group believes their version of God is the ONLY one,<br>
+    questioning becomes rebellion.<br>
+    Obedience becomes salvation.</p>
+
+    <p>At that point… it isn’t faith.<br>
+    It’s power—through certainty.</p>
+
+    <div class="divider">⸻</div>
+
+    <h2>METAPHOR: THE DOORWAY TO WISDOM</h2>
+
+    <p>Myth, when understood symbolically, is NOT false.<br>
+    It is multi-layered truth.</p>
+
+    <p>Take it literally… and it shrinks.<br>
+    See it metaphorically… and it expands.</p>
+
+    <p>The snake in Eden isn’t just a reptile—<br>
+    it’s temptation, knowledge, transformation.</p>
+
+    <p>The cross isn’t just wood—<br>
+    it’s the eternal struggle<br>
+    between ego… and surrender.</p>
+
+    <p>The problem was never religion itself.<br>
+    The problem was forgetting how to read it.</p>
+
+    <p>Humanity stopped reading poetry—<br>
+    and began enforcing law.</p>
+
+    <div class="divider">⸻</div>
+
+    <h2>THE EVOLUTION OF CONSCIOUSNESS</h2>
+
+    <p>You are witnessing what mystics and philosophers saw long ago:</p>
+
+    <p>Humanity evolves when it stops worshipping the symbol…<br>
+    and begins understanding the meaning behind it.</p>
+
+    <p>Where God is not a being “out there”…<br>
+    but the very order, intelligence,<br>
+    and living energy of existence itself.</p>
+
+    <p>We—this generation—<br>
+    are learning to unfreeze the metaphor…<br>
+    to read the divine story as it was meant to be read:</p>
+
+    <p>Not as a map of the sky…<br>
+    but as a mirror of the mind.</p>
+
+    <div class="divider">⸻</div>
+
+    <h2>MAIN REFLECTION</h2>
+
+    <p>Religion was never the enemy of truth—<br>
+    misunderstanding was.</p>
+
+    <p>The earliest seekers had no telescopes…<br>
+    no equations…<br>
+    only imagination.</p>
+
+    <p>They painted meaning with myth,<br>
+    turning invisible truths into living poetry.</p>
+
+    <p>But when later generations<br>
+    stopped seeing symbols as symbols,<br>
+    and worshipped them as facts…<br>
+    the myth became a prison.</p>
+
+    <p>A serpent once symbolizing wisdom… became evil.<br>
+    A tree symbolizing knowledge… became forbidden.<br>
+    A universe born from divine order…<br>
+    was reduced to seven literal days.</p>
+
+    <p>Literalism shrunk the infinite.<br>
+    Myth became dogma.<br>
+    Faith became blind loyalty.<br>
+    Interpretation became institution.<br>
+    And the living spirit of truth<br>
+    was replaced by the static claim of authority.</p>
+
+    <p>The tragedy is not that religion exists…<br>
+    but that it forgot its own language.</p>
+
+    <p>It began as music for the soul…<br>
+    and ended as a script of rules.<br>
+    It preached love…<br>
+    but demanded obedience.<br>
+    It offered symbols of awakening…<br>
+    but punished those who saw beyond them.</p>
+
+    <p>But the sacred never dies.<br>
+    It only hides—<br>
+    waiting for a mind brave enough<br>
+    to translate again.</p>
+
+    <p>The wise do not reject scripture.<br>
+    They RE-read it.</p>
+
+    <p>They see God not as a figure…<br>
+    but as the pattern in all things.</p>
+
+    <p>They see heaven not as a place…<br>
+    but as a state of clarity.</p>
+
+    <p>They see sin not as punishment…<br>
+    but as separation from awareness.</p>
+
+    <p>The lost language of metaphor<br>
+    is the bridge between faith and science…<br>
+    between mystery and meaning…<br>
+    between heart and reason.</p>
+
+    <p>When we recover it…<br>
+    the wall becomes a window again.<br>
+    And through that window…<br>
+    we rediscover not religion…<br>
+    but revelation.</p>
+
+    <div class="divider">— ❖ —</div>
+
+    <div class="divider">⸻</div>
+
+    <h2>ABOUT THE AUTHOR</h2>
+
+    <p>Ninox Antolihao is a Filipino thinker, creator,<br>
+    and founder of Stone Grill Restaurant.<br>
+    A member of the Magma Cowboys community,<br>
+    his work unites philosophy, science, and spirituality—<br>
+    inviting readers to look beyond dogma<br>
+    and rediscover meaning through awareness.</p>
+
+    <p>Through his series “Moments of Solitude,”<br>
+    he writes to awaken the quiet places of the mind—<br>
+    where reason meets reverence…<br>
+    and the sacred is understood as truth,<br>
+    not tradition.</p>
+
+    <p><em>First Edition, 2025 — Ninox Antolihao</em></p>
+
+    <!-- ========== FOOTER ========== -->
+    <footer>
+      <p>© 2025 Ninox Antolihao · First Edition — Stone Grill Press · Leyte, Philippines</p>
+    </footer>
+  </main>
+
+  <!-- Secondary back link (same style as other reflections) -->
+  <div class="wrap" style="display:flex; text-align:left;">
+    <a class="back" href="/reflections/index.html" style="color:var(--accent); text-decoration:none; font-weight:700">← Back to Reflections</a>
+  </div>
+
+  <!-- ========== AUTOPLAY / BACK BRIDGE ========== -->
+  <script>
+  document.addEventListener('DOMContentLoaded', () => {
+    const audio = document.querySelector('audio');
+    const p = new URLSearchParams(location.search);
+    const fromIndex = p.get('autoplay') === '1' || sessionStorage.getItem('autoplayAudio') === 'true';
+
+    if (fromIndex && audio) {
+      audio.play().catch(() => {
+        console.log('Autoplay blocked; user must press play.');
+      });
+      sessionStorage.removeItem('autoplayAudio');
+    }
+
+    // Optional: show Back button if user came from index
+    if (p.get('back') === '1' || sessionStorage.getItem('showBack') === 'true') {
+      const back = document.createElement('a');
+      back.href = '/reflections/index.html';
+      back.className = 'btn ghost';
+      back.textContent = '← Back to Reflections';
+      (document.querySelector('header') || document.body).prepend(back);
+      sessionStorage.removeItem('showBack');
+    }
+  });
+  </script>
+
+  <!-- ========== SERVICE WORKER ========== -->
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('/reflections/sw.js')
+        .then(reg => console.log("SW registered"))
+        .catch(err => console.log("SW failed:", err));
+    }
+  </script>
+</body>
+</html>
