--- a/reflections/index.html
+++ b/reflections/index.html
@@ -219,7 +219,7 @@ began to bind it.</p>
       <section class="audio-wrap" id="audioMount-paradox of god">
             <p class="label">🎧 Audio Reflection: <strong>The Lost Language of Metaphor</strong></p>
             <audio controls preload="auto" style="width:100%">
-              <source src="/reflections/pages/the-lost-language-of-metaphor/lost-language-of-metaphor.mp3" type="audio/mpeg">
+              <source src="/reflections/pages/the-lost-language-of-metaphor/lost-language-of-metaphor.m4a" type="audio/mpeg">
               Your browser does not support the audio element.
             </audio>
     </section>
