Update audio source and share title in index.html

--- a/reflections/index.html
+++ b/reflections/index.html
@@ -219,14 +219,14 @@ began to bind it.</p>
       <section class="audio-wrap" id="audioMount-paradox of god">
             <p class="label">🎧 Audio Reflection: <strong>The Lost Language of Metaphor</strong></p>
             <audio controls preload="auto" style="width:100%">
-              <source src="/reflections/pages/the-lost-language-of-metaphor/lost-language-of-metaphor.m4a" type="audio/mpeg">
+              <source src="/reflections/pages/the-lost-language-of-metaphor/lost-language-of-metaphor.mp3" type="audio/mpeg">
               Your browser does not support the audio element.
             </audio>
     </section>
           
           <div class="share-group"
                data-share-url="https://stonegrillresto.net/reflections/pages/the-lost-language-of-metaphor/read.html"
-               data-share-title="The Paradox of God — Ninox Antolihao"></div>
+               data-share-title="The Lost Language of Metaphor — Ninox Antolihao"></div>
         </div>
       </article>
       
