Update meta tags and image source in read.html

--- a/reflections/pages/the-lost-language-of-metaphor/read.html
+++ b/reflections/pages/the-lost-language-of-metaphor/read.html
@@ -11,7 +11,7 @@
   <meta property="og:title" content="The Paradox of God — Ninox Antolihao">
   <meta property="og:description" content="A reflection that wrestles with the tension between an infinite Source and the finite images of God we create.">
   <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/paradoxofgod.png">
-  <meta property="og:image:alt" content="The Paradox of God — Ninox Antolihao">
+  <meta property="og:image:alt" content="The Lost Language Of Metaphor — Ninox Antolihao">
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html">
 
@@ -102,7 +102,7 @@
   <main>
     <!-- ========== HEADER ========== -->
     <header>
-      <img src="lostlanguageofmetaphor.png" alt="Stone Grill Logo">
+      <img src="reflections/pages/Untitled.png" alt="Stone Grill Logo">
       <h1>The Lost Language of Metaphor</h1>
       <p class="meta">By Ninox Antolihao • First Edition — 2025</p>
     </header>
