--- a/reflections/pages/the-lost-language-of-metaphor/read.html
+++ b/reflections/pages/the-lost-language-of-metaphor/read.html
@@ -5,15 +5,15 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
-  <title>The Paradox of God — Ninox Antolihao</title>
+  <title>The Lost Language of Metaphor — Ninox Antolihao</title>
   <meta name="description" content="A reflection by Ninox Antolihao exploring the paradox of a perfect, loving God revealed through human-shaped beliefs, scriptures, and stories.">
 
-  <meta property="og:title" content="The Paradox of God — Ninox Antolihao">
+  <meta property="og:title" content="The Lost Language of Metaphor — Ninox Antolihao">
   <meta property="og:description" content="A reflection that wrestles with the tension between an infinite Source and the finite images of God we create.">
-  <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/paradoxofgod.png">
+  <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/the-lost-language-of-metaphor/lostlanguageofmetaphor.png">
   <meta property="og:image:alt" content="The Lost Language Of Metaphor — Ninox Antolihao">
   <meta property="og:type" content="article">
-  <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html">
+  <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/the-lost-language-of-metaphor/read.html">
 
   <link rel="icon" href="/reflections/assets/favicon.ico">
 
