--- a/reflections/pages/the-lost-language-of-metaphor/read.html
+++ b/reflections/pages/the-lost-language-of-metaphor/read.html
@@ -10,7 +10,7 @@
 
   <meta property="og:title" content="The Lost Language of Metaphor — Ninox Antolihao">
   <meta property="og:description" content="A reflection that wrestles with the tension between an infinite Source and the finite images of God we create.">
-  <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/the-lost-language-of-metaphor/lostlanguageofmetaphor.png">
+  <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/the-lost-language-of-metaphor/lostlanguageofmetaphor.jpg">
   <meta property="og:image:alt" content="The Lost Language Of Metaphor — Ninox Antolihao">
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/the-lost-language-of-metaphor/read.html">
@@ -18,7 +18,7 @@
   <link rel="icon" href="/reflections/assets/favicon.ico">
 
   <!-- Social preview (keep as-is style) -->
-  <meta property="og:image" content="https://stonegrillresto.net/reflections/assets/logo.png">
+  <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/the-lost-language-of-metaphor/lostlanguageofmetaphor.jpg">
   <meta property="og:image:width" content="240">
   <meta property="og:image:height" content="371">
   <meta property="og:image:alt" content="A Journey from Duality to Oneness">
