--- a/reflections/pages/the-lost-language-of-metaphor/read.html
+++ b/reflections/pages/the-lost-language-of-metaphor/read.html
@@ -102,7 +102,7 @@
   <main>
     <!-- ========== HEADER ========== -->
     <header>
-      <img src="reflections/pages/Untitled.png" alt="Stone Grill Logo">
+      <img src="reflections/pages/the-lost-language-of-metaphor/lostlanguageofmetaphor.jpg" alt="Stone Grill Logo">
       <h1>The Lost Language of Metaphor</h1>
       <p class="meta">By Ninox Antolihao • First Edition — 2025</p>
     </header>
