--- a/reflections/pages/the-lost-language-of-metaphor/read.html
+++ b/reflections/pages/the-lost-language-of-metaphor/read.html
@@ -115,7 +115,7 @@
       document.write(
         createAudioPlayer(
           'lost-language-of-metaphor.mp3',
-          'the lost language of metaphor — Audio (Epic TTS Version)'
+          'the lost language of metaphor — Audio'
         )
       );
     </script>
