--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -17,12 +17,12 @@
   <link rel="stylesheet" href="/reflections/assets/reflections.css?v=12">
 
   <!-- Basic SEO -->
-  <meta name="description" content="A reflection by Ninox Antolihao on the paradox of a perfect God creating a flawed world, free will, and the questions that refuse to die.">
+  <meta name="description" content="A quiet, honest reflection by Ninox Antolihao">
 
   <!-- Open Graph -->
   <meta property="og:type" content="article">
   <meta property="og:title" content="The Paradox of God — Solitude Reflections">
-  <meta property="og:description" content="If God is perfect and all-knowing, why create a world where failure is inevitable? A quiet, honest reflection by Ninox Antolihao.">
+  <meta property="og:description" content=" A quiet, honest reflection by Ninox Antolihao.">
   <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html">
   <!-- Update this cover path to your final image -->
   <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/cover.jpg">
