--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -255,7 +255,7 @@
 
       <!-- Update src to your actual mp3 -->
       <audio id="reflectionAudio" preload="metadata">
-        <source src="/reflections/pages/the-paradox-of-god/theparadoxofgod.mp3" type="audio/mpeg">
+        <source src="/reflections/pages/the-paradox-of-god/theparadoxofgod.mp3?=v2" type="audio/mpeg">
         Your browser does not support the audio element.
       </audio>
     </section>
