Revise hero section text in index.html
Updated hero section text for clarity and engagement.

--- a/reflections/index.html
+++ b/reflections/index.html
@@ -30,9 +30,9 @@
     <p class="tag">The Inner Kingdom of Faith, Mind and Light</p>
   </header>
 
-  <div class="hero">
-    All topics in one place. Tap <strong>the cover or title</strong> to read, the <strong>PDF</strong> link to download, or <strong>Share</strong> to inspire others.
-  </div>
+<div class="hero">
+  Tap a <strong>title</strong> to read the reflection, use the <strong>audio player</strong> to listen, and <strong>share</strong> any piece that speaks to you.
+</div>
 
   <!-- MAIN CONTENT -->
   <main class="wrap">
