Update audio track names and button labels

--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -248,8 +248,8 @@
   </audio>
 
   <div class="track-buttons">
-    <button onclick="switchTrack(1)" id="btn1" class="active">Track 1</button>
-    <button onclick="switchTrack(2)" id="btn2">Track 2</button>
+    <button onclick="switchTrack(1)" id="btn1" class="active">The paradox of god</button>
+    <button onclick="switchTrack(2)" id="btn2">Paradox of God</button>
   </div>
 </div>
 
@@ -258,8 +258,8 @@
   const audioSource = document.getElementById("audioSource");
 
   // ⭐ THIS IS WHERE YOU PUT YOUR FILE LOCATIONS ⭐
-  const track1 = "/reflections/pages/paradox-of-god/paradox-caleb.mp3";
-  const track2 = "/reflections/pages/paradox-of-god/paradox-gwyneth.mp3";
+  const track1 = "/reflections/pages/paradox-of-god/theparadoxofgod.mp3";
+  const track2 = "/reflections/pages/paradox-of-god/paradoxofgod.mp3";
 
   // ⭐ This sets the default track on page load
   audioSource.src = track1;
