--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -252,18 +252,18 @@
   <!-- Playlist-style track list -->
   <div class="playlist">
     <div class="playlist-row active"
-         data-src="/reflections/pages/the-paradox-of-god/paradoxofgod.mp3">
+         data-src="/reflections/pages/the-paradox-of-god/theparadoxofgod.mp3">
       <div class="playlist-main">
-        <div class="playlist-title">Paradox of God</div>
+        <div class="playlist-title">The Paradox of God</div>
         <div class="playlist-sub">Narrated reflection</div>
       </div>
       <div class="playlist-duration">--:--</div>
     </div>
 
     <div class="playlist-row"
-         data-src="/reflections/pages/the-paradox-of-god/theparadoxofgod.mp3">
+         data-src="/reflections/pages/diety/diety.mp3">
       <div class="playlist-main">
-        <div class="playlist-title">The Paradox of God</div>
+        <div class="playlist-title">The Deity</div>
         <div class="playlist-sub">Alternative narration</div>
       </div>
       <div class="playlist-duration">--:--</div>
