--- a/reflections/pages/the-god-we-created/read.html
+++ b/reflections/pages/the-god-we-created/read.html
@@ -108,154 +108,200 @@
   <a href="/reflections/index.html" class="back">← Back to Reflections</a>
 
  <!-- 🎧 Audio Player (same folder) -->
-    <section class="audio-wrap">
-    <div class="audio-wrapper">
-  <!-- Actual audio player -->
-  <audio id="reflectionAudio" controls preload="metadata">
-    <source id="audioSource" src="" type="audio/mpeg">
-    Your browser does not support the audio element.
-  </audio>
+   <!-- 🎧 Audio Player (same folder) -->
+<section class="audio-wrap">
+  <div class="audio-wrapper">
+    <!-- Actual audio element -->
+    <audio id="reflectionAudio" controls preload="metadata">
+      <source id="audioSource" src="" type="audio/mpeg">
+      Your browser does not support the audio element.
+    </audio>
 
-  <!-- Playlist-style track list -->
-  <div class="playlist">
-    <div class="playlist-row active"
-         data-src="/reflections/pages/the-god-we-created/the-gods-we-create.mp3">
-      <div class="playlist-main">
-        <div class="playlist-title">The God-We-Created</div>
-        <div class="playlist-sub">When Question grow louder than the Answers</div>
+    <!-- Playlist-style track list -->
+    <div class="playlist">
+      <!-- Track 1 -->
+      <div class="playlist-row active"
+           data-src="/reflections/pages/the-god-we-created/the-gods-we-create.mp3">
+        <div class="playlist-main">
+          <div class="playlist-title">The God We Created</div>
+          <div class="playlist-sub scroll-wrap">
+            <div class="scroll-text">When questions grow louder than the answers…</div>
+          </div>
+        </div>
+        <div class="playlist-duration">--:--</div>
       </div>
-      <div class="playlist-duration">--:--</div>
-    </div>
 
-    <div class="playlist-row"
-         data-src="/reflections/pages/the-madness-of-fath/the-madness-of-faith.mp3">
-      <div class="playlist-main">
-        <div class="playlist-title">The Madness of Faith</div>
-        <div class="playlist-sub">when a belief demands the death of reason</div>
+      <!-- Track 2 -->
+      <div class="playlist-row"
+           data-src="/reflections/pages/the-madness-of-fath/the-madness-of-faith.mp3">
+        <div class="playlist-main">
+          <div class="playlist-title">The Madness of Faith</div>
+          <div class="playlist-sub scroll-wrap">
+            <div class="scroll-text">When a belief demands the death of reason…</div>
+          </div>
+        </div>
+        <div class="playlist-duration">--:--</div>
       </div>
-      <div class="playlist-duration">--:--</div>
     </div>
   </div>
-</div>
 
-<script>
-  const audioPlayer = document.getElementById('reflectionAudio');
-  const audioSource = document.getElementById('audioSource');
-  const rows = document.querySelectorAll('.playlist-row');
+  <!-- JS: playlist + smart auto-scroll -->
+  <script>
+    // Scroll only when text is wider than its container
+    function applySmartScroll() {
+      const wraps = document.querySelectorAll('.scroll-wrap');
 
-  // Set default track = first row
-  if (rows.length > 0) {
-    const firstSrc = rows[0].dataset.src;
-    audioSource.src = firstSrc;
-    audioPlayer.load();
-  }
+      wraps.forEach(wrap => {
+        const text = wrap.querySelector('.scroll-text');
+        if (!text) return;
 
-  // Clicking a row switches track
-  rows.forEach(row => {
-    row.addEventListener('click', () => {
-      // change active highlight
-      rows.forEach(r => r.classList.remove('active'));
-      row.classList.add('active');
+        // Reset animation first
+        text.style.animation = 'none';
 
-      // swap audio source
-      const src = row.dataset.src;
-      audioSource.src = src;
-      audioPlayer.load();
-      audioPlayer.play();
-    });
-  });
+        // Only animate if text overflows horizontally
+        if (text.scrollWidth > wrap.clientWidth) {
+          const duration = text.scrollWidth / 40; // adjust speed here
+          text.style.animation = `scroll-left ${duration}s linear infinite`;
+        }
+      });
+    }
 
-  // OPTIONAL: auto-fill durations from audio metadata
-  rows.forEach(row => {
-    const src = row.dataset.src;
-    const tempAudio = new Audio(src);
-    tempAudio.addEventListener('loadedmetadata', () => {
-      const dur = tempAudio.duration;
-      if (!isNaN(dur)) {
-        const total = Math.floor(dur);
-        const min = String(Math.floor(total / 60)).padStart(2, '0');
-        const sec = String(total % 60).padStart(2, '0');
-        const durEl = row.querySelector('.playlist-duration');
-        if (durEl) durEl.textContent = `${min}:${sec}`;
+    document.addEventListener('DOMContentLoaded', () => {
+      const audioPlayer = document.getElementById('reflectionAudio');
+      const audioSource = document.getElementById('audioSource');
+      const rows = document.querySelectorAll('.playlist-row');
+
+      // Default track: first row
+      if (rows.length > 0) {
+        const firstSrc = rows[0].dataset.src;
+        audioSource.src = firstSrc;
+        audioPlayer.load();
       }
+
+      // Clicking a row switches track
+      rows.forEach(row => {
+        row.addEventListener('click', () => {
+          rows.forEach(r => r.classList.remove('active'));
+          row.classList.add('active');
+
+          const src = row.dataset.src;
+          audioSource.src = src;
+          audioPlayer.load();
+          audioPlayer.play();
+        });
+      });
+
+      // Auto-fill durations (if metadata available)
+      rows.forEach(row => {
+        const src = row.dataset.src;
+        const tempAudio = new Audio(src);
+        tempAudio.addEventListener('loadedmetadata', () => {
+          const dur = tempAudio.duration;
+          if (!isNaN(dur)) {
+            const total = Math.floor(dur);
+            const min = String(Math.floor(total / 60)).padStart(2, '0');
+            const sec = String(total % 60).padStart(2, '0');
+            const durEl = row.querySelector('.playlist-duration');
+            if (durEl) durEl.textContent = `${min}:${sec}`;
+          }
+        });
+      });
+
+      // Apply scrolling after layout
+      applySmartScroll();
+      window.addEventListener('resize', applySmartScroll);
     });
-  });
-</script>
+  </script>
 
-<style>
-  .audio-wrapper {
-    margin: 1.6rem 0;
-    padding: 1.2rem;
-    background: #2a211e;
-    border-radius: 14px;
-  }
+  <!-- CSS: playlist look + scrolling style -->
+  <style>
+    .audio-wrapper {
+      margin: 1.6rem 0;
+      padding: 1.2rem;
+      background: #2a211e;
+      border-radius: 14px;
+    }
 
-  #reflectionAudio {
-    width: 100%;
-    display: block;
-  }
+    #reflectionAudio {
+      width: 100%;
+      display: block;
+    }
 
-  .playlist {
-    margin-top: 1rem;
-    display: flex;
-    flex-direction: column;
-    gap: 0.4rem;
-  }
+    .playlist {
+      margin-top: 1rem;
+      display: flex;
+      flex-direction: column;
+      gap: 0.4rem;
+    }
 
-  .playlist-row {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0.7rem 1rem;
-    background: #1f1815;
-    border-radius: 8px;
-    cursor: pointer;
-    border: 1px solid #2b221f;
-    transition: background 0.15s ease, border-color 0.15s ease, color 0.15s ease;
-  }
+    .playlist-row {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0.7rem 1rem;
+      background: #1f1815;
+      border-radius: 8px;
+      cursor: pointer;
+      border: 1px solid #2b221f;
+      transition: background 0.15s ease, border-color 0.15s ease, color 0.15s ease;
+    }
 
-  .playlist-row:hover {
-    border-color: #ff6b3d;
-  }
+    .playlist-row:hover {
+      border-color: #ff6b3d;
+    }
 
-  .playlist-row.active {
-    background: #322621;
-    border-color: #ff6b3d;
-    box-shadow: 0 0 6px rgba(255, 107, 61, 0.45);
-  }
+    .playlist-row.active {
+      background: #322621;
+      border-color: #ff6b3d;
+      box-shadow: 0 0 6px rgba(255, 107, 61, 0.45);
+    }
 
-  .playlist-main {
-    display: flex;
-    flex-direction: column;
-    gap: 0.15rem;
-    overflow: hidden;
-  }
+    .playlist-main {
+      display: flex;
+      flex-direction: column;
+      gap: 0.15rem;
+      overflow: hidden;
+    }
 
-  .playlist-title {
-    font-size: 0.98rem;
-    font-weight: 600;
-    color: #f3e6dd;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
+    .playlist-title {
+      font-size: 0.98rem;
+      font-weight: 600;
+      color: #f3e6dd;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
 
-  .playlist-sub {
-    font-size: 0.8rem;
-    color: #b29587;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
+    .playlist-sub {
+      font-size: 0.8rem;
+      color: #b29587;
+    }
 
-  .playlist-duration {
-    font-size: 0.85rem;
-    color: #c9b0a4;
-    margin-left: 1rem;
-    flex-shrink: 0;
-  }
-</style>
-    </section>
+    .playlist-duration {
+      font-size: 0.85rem;
+      color: #c9b0a4;
+      margin-left: 1rem;
+      flex-shrink: 0;
+    }
+
+    /* scrolling wrapper */
+    .scroll-wrap {
+      position: relative;
+      overflow: hidden;
+      white-space: nowrap;
+    }
+
+    .scroll-text {
+      display: inline-block;
+      white-space: nowrap;
+    }
+
+    @keyframes scroll-left {
+      0% { transform: translateX(0); }
+      100% { transform: translateX(-100%); }
+    }
+  </style>
+</section>
 
     <h2>About the Author</h2>
     <p>Ninox Antolihao is a seeker of truth, a writer of questions, and a student of the unseen. Rooted in both community life and contemplative solitude, he writes to explore the gaps between faith and fact, spirit and story, myth and meaning. His reflections are not written to teach—but to open doors. Each one invites the reader to look again, and to listen more closely. In a world clouded by noise, Ninox writes to rediscover clarity.</p>
